# ffi_mina_signer

./: .gitignore  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/staking_power/ffi_mina_signer/: FfiMinaSignerPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/staking_power/ffi_mina_signer_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/test/: tests.dart
example/test/: widget_test.dart
ios/: ffi_mina_signer.podspec
ios/Classes/: FfiMinaSignerPlugin.h  FfiMinaSignerPlugin.m  SwiftFfiMinaSignerPlugin.swift
ios/Classes/mina_native_signer/: crypto.c  crypto.h  main.c  porting.c  porting.h  signer.c
lib/: constant.dart  ffi_mina_signer.dart  libmina_signer_binding.dart  mina_sdk.dart  mina_signer_native.dart  mina_signer_sdk.dart
lib/crypto/: sha.dart
lib/encrypt/: crypter.dart
lib/encrypt/aes/: aes_cbcpkcs7.dart
lib/encrypt/kdf/: argon2_kdf.dart  kdf.dart  pbkdf2_kdf.dart  sha256_kdf.dart
lib/global/: global.dart
lib/sdk/: libmina_signer_binding.dart  mina_signer_sdk.dart
lib/tests/: tests.dart
lib/types/: key_types.dart
lib/util/: mina_helper.dart
test/: ffi_mina_signer_test.dart
